Fix CSS spacing related to the data and add Open Sans google font

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
 html,
 body {
   background-color: #fff;
@@ -65,14 +71,18 @@ a.country-card {
   text-decoration: none;
 }
 
-.country-name {
-  font-size: 24px;
+.country-link h2 {
+  font-size: 18px;
+  font-weight: 700;
   text-decoration: underline;
+  color: #fff;
+  margin: 5px 10px;
 }
 
 .country-link p {
   color: #fff;
-  font-weight: 700;
+  font-weight: 400;
+  font-size: 14px;
   margin: 15px 10px;
 }
 
